# sudoku-solver-rs

./: Cargo.toml  README.md
src/: engine.rs  lib.rs  main.rs  solvers.rs  spec.rs  sudoku.rs  utils.rs
tests/: correct.json  empty.json  example.sdk  one.json  puzzle42.ss
